<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Book Reviews</string>
    <string name="home">Головна</string>
    <string name="profile">Профіль</string>
    <string name="discussions">Обговорення</string>
    <string name="recommendations">Рекомендації</string>
    <string name="find_readers">Знайти читачів</string>
    <string name="book_clubs">Книжкові клуби</string>
    <string name="search_hint">Пошук книг...</string>
    <string name="error_loading_books">Помилка завантаження книг</string>
    <string name="leave_review">Залишити відгук</string>
    <string name="write_review">Напишіть вашу думку про книгу...</string>
    <string name="submit_review">Відправити відгук</string>
    <string name="error_empty_comment">Будь ласка, напишіть відгук</string>
    <string name="review_submitted">Дякуємо за ваш відгук!</string>
    <string name="error_no_rating">Будь ласка, поставте оцінку</string>
    <string name="reviews">Відгуки</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Увійти</string>
    <string name="register_prompt">Немає акаунту? Зареєструватися</string>
    <string name="fill_all_fields">Заповніть всі поля</string>
    <string name="username">Ім\'я користувача</string>
    <string name="register">Зареєструватися</string>
    <string name="menu_home">Головна</string>
    <string name="menu_recommendations">Рекомендації</string>
    <string name="menu_favorites">Улюблені</string>
    <string name="navigation_drawer_open">Відкрити меню</string>
    <string name="navigation_drawer_close">Закрити меню</string>
    <string name="coming_soon_recommendations">Рекомендації скоро будуть доступні</string>
    <string name="coming_soon_favorites">Улюблені скоро будуть доступні</string>
    <string name="toggle_theme">Змінити тему</string>
    <string name="added_to_favorites">Додано до улюблених</string>
    <string name="removed_from_favorites">Видалено з улюблених</string>
    <string name="no_favorites">У вас поки немає улюблених книг</string>
    <string name="start_rating">Почніть оцінювати книги для отримання рекомендацій</string>
    <string name="member_count">Учасників: %d</string>
    <string name="create_club">Створити клуб</string>
    <string name="club_name_hint">Назва клубу</string>
    <string name="club_description_hint">Опис клубу</string>
    <string name="private_club">Приватний клуб</string>
    <string name="error_empty_club_name">Введіть назву клубу</string>
    <string name="club_created">Клуб створено</string>
    <string name="error_creating_club">Помилка при створенні клубу</string>
    <string name="join_club">Приєднатися</string>
    <string name="leave_club">Покинути клуб</string>
    <string name="joined_club">Ви приєдналися до клубу</string>
    <string name="left_club">Ви покинули клуб</string>
    <string name="creator_cant_leave">Творець не може покинути клуб</string>
    <string name="search_readers_hint">Пошук читачів</string>
    <string name="comment_count">Коментарів: %d</string>
    <string name="review_count">Відгуків: %d</string>
    <string name="create_discussion">Створити обговорення</string>
    <string name="no_discussions">Немає обговорень</string>
    <string name="no_recommendations">Немає рекомендацій</string>
    <string name="no_readers_found">Читачів не знайдено</string>
</resources> 