<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_book_clubs"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/book_clubs" />

        <item
            android:id="@+id/nav_discussions"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/discussions" />

        <item
            android:id="@+id/nav_recommendations"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/recommendations" />

        <item
            android:id="@+id/nav_find_readers"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/find_readers" />
    </group>
</menu> 